fix overflow

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
   border-radius: 10px;
 }
 .child{
+  overflow: hidden;
   width: 300px;
   border-radius: 10px;
   background-color: #353935;
